Realtime compositor: crash when rendering with large render size #115043

Closed
opened 2023-11-17 13:57:42 +01:00 by Habib Gahbiche · 1 comment
Member

System Information
Operating system: macOS-14.1.1-x86_64-i386-64bit 64 Bits
Graphics card: Metal API AMD Radeon Pro 560X 1.2

Blender Version
Broken: version: 4.1.0 Alpha, branch: com-split-node (modified), commit date: 2023-11-17 10:59, hash: 05ba55801db4
Worked: Unknown

Short description of error
Blender crashes when rendering with GPU compositor enabled and large render size.
Stacktrace:

Exception Type:        EXC_CRASH (SIGABRT)
Exception Codes:       0x0000000000000000, 0x0000000000000000

Termination Reason:    Namespace SIGNAL, Code 6 Abort trap: 6
Terminating Process:   Blender [26444]

Thread 0::  Dispatch queue: com.apple.main-thread
0   libsystem_kernel.dylib        	    0x7ff81b1c260e __psynch_cvwait + 10
1   libsystem_pthread.dylib       	    0x7ff81b1ff76b _pthread_cond_wait + 1211
2   Blender                       	       0x10be3faeb BLI_ticket_mutex_lock + 59
3   Blender                       	       0x10c03560d DRW_gpu_context_enable + 61
4   Blender                       	       0x11115df0a GPU_viewport_bind + 42
5   Blender                       	       0x10be4ea2f wm_draw_update(bContext*) + 1855
6   Blender                       	       0x10be852cf ghost_event_proc(GHOST_EventHandle__*, void*) + 1615
7   Blender                       	       0x10d4da89c GHOST_EventManager::dispatchEvent() + 236
8   Blender                       	       0x10d4db0f8 GHOST_EventManager::dispatchEvents() + 24
9   Blender                       	       0x10d4dd226 GHOST_System::dispatchEvents() + 38
10  Blender                       	       0x10be8489a wm_window_events_process(bContext const*) + 58
11  Blender                       	       0x10be4a748 WM_main(bContext*) + 24
12  Blender                       	       0x10b5250da main + 858
13  dyld                          	    0x7ff81ae763a6 start + 1942

In debug mode, assert is hit in gpu::MTLTexture::ensure_baked().

Exact steps for others to reproduce the error
Render attached file or:

  1. Open startup file
  2. Enable compositing and set execution mode to GPU (experimental feature)
  3. Set render size to 19200x10800
  4. Render
**System Information** Operating system: macOS-14.1.1-x86_64-i386-64bit 64 Bits Graphics card: Metal API AMD Radeon Pro 560X 1.2 **Blender Version** Broken: version: 4.1.0 Alpha, branch: com-split-node (modified), commit date: 2023-11-17 10:59, hash: `05ba55801db4` Worked: Unknown **Short description of error** Blender crashes when rendering with GPU compositor enabled and large render size. Stacktrace: ```txt Exception Type: EXC_CRASH (SIGABRT) Exception Codes: 0x0000000000000000, 0x0000000000000000 Termination Reason: Namespace SIGNAL, Code 6 Abort trap: 6 Terminating Process: Blender [26444] Thread 0:: Dispatch queue: com.apple.main-thread 0 libsystem_kernel.dylib 0x7ff81b1c260e __psynch_cvwait + 10 1 libsystem_pthread.dylib 0x7ff81b1ff76b _pthread_cond_wait + 1211 2 Blender 0x10be3faeb BLI_ticket_mutex_lock + 59 3 Blender 0x10c03560d DRW_gpu_context_enable + 61 4 Blender 0x11115df0a GPU_viewport_bind + 42 5 Blender 0x10be4ea2f wm_draw_update(bContext*) + 1855 6 Blender 0x10be852cf ghost_event_proc(GHOST_EventHandle__*, void*) + 1615 7 Blender 0x10d4da89c GHOST_EventManager::dispatchEvent() + 236 8 Blender 0x10d4db0f8 GHOST_EventManager::dispatchEvents() + 24 9 Blender 0x10d4dd226 GHOST_System::dispatchEvents() + 38 10 Blender 0x10be8489a wm_window_events_process(bContext const*) + 58 11 Blender 0x10be4a748 WM_main(bContext*) + 24 12 Blender 0x10b5250da main + 858 13 dyld 0x7ff81ae763a6 start + 1942 ``` In debug mode, `assert` is hit in `gpu::MTLTexture::ensure_baked()`. **Exact steps for others to reproduce the error** Render attached file or: 1. Open startup file 2. Enable compositing and set execution mode to GPU (experimental feature) 3. Set render size to 19200x10800 4. Render
Habib Gahbiche added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2023-11-17 13:57:43 +01:00
Omar Emara self-assigned this 2023-11-17 14:42:33 +01:00

I can confirm a crash, but it doesn't happen on the main thread as mentioned in the description:

>	blender.exe!blender::gpu::GLStateManager::image_bind(blender::gpu::Texture * tex_, int unit) Line 567	C++
 	blender.exe!GPU_texture_image_bind(GPUTexture * tex, int unit) Line 593	C++
 	blender.exe!blender::realtime_compositor::Result::bind_as_image(GPUShader * shader, const char * image_name, bool read) Line 138	C++
 	blender.exe!blender::realtime_compositor::realize_on_domain(blender::realtime_compositor::Context & context, blender::realtime_compositor::Result & input, blender::realtime_compositor::Result & output, const blender::realtime_compositor::Domain & domain, const blender::MatBase<float,3,3,4> & input_transformation, const blender::realtime_compositor::RealizationOptions & realization_options) Line 113	C++
 	blender.exe!blender::realtime_compositor::RealizeOnDomainOperation::execute() Line 38	C++
 	blender.exe!blender::realtime_compositor::Operation::evaluate() Line 37	C++
 	blender.exe!blender::realtime_compositor::Operation::add_and_evaluate_input_processor(blender::StringRef identifier, blender::realtime_compositor::SimpleOperation * processor) Line 138	C++
 	blender.exe!blender::realtime_compositor::Operation::add_and_evaluate_input_processors() Line 112	C++
 	blender.exe!blender::realtime_compositor::Operation::evaluate_input_processors() Line 181	C++
 	blender.exe!blender::realtime_compositor::Operation::evaluate() Line 33	C++
 	blender.exe!blender::realtime_compositor::Evaluator::compile_and_evaluate_node(blender::nodes::DNode node, blender::realtime_compositor::CompileState & compile_state) Line 109	C++
 	blender.exe!blender::realtime_compositor::Evaluator::compile_and_evaluate() Line 90	C++
 	blender.exe!blender::realtime_compositor::Evaluator::evaluate() Line 35	C++
 	blender.exe!blender::render::RealtimeCompositor::execute(const blender::render::ContextInputData & input_data) Line 488	C++
 	blender.exe!Render::compositor_execute(const Scene & scene, const RenderData & render_data, const bNodeTree & node_tree, const bool use_file_output, const char * view_name) Line 515	C++
 	blender.exe!RE_compositor_execute(Render & render, const Scene & scene, const RenderData & render_data, const bNodeTree & node_tree, const bool use_file_output, const char * view_name) Line 536	C++
 	blender.exe!COM_execute(Render * render, RenderData * render_data, Scene * scene, bNodeTree * node_tree, bool rendering, const char * view_name) Line 84	C++
 	blender.exe!ntreeCompositExecTree(Render * render, Scene * scene, bNodeTree * ntree, RenderData * rd, bool rendering, int do_preview, const char * view_name) Line 191	C++
 	blender.exe!do_render_compositor(Render * re) Line 1272	C++
 	blender.exe!do_render_full_pipeline(Render * re) Line 1474	C++
 	blender.exe!RE_RenderFrame(Render * re, Main * bmain, Scene * scene, ViewLayer * single_layer, Object * camera_override, int frame, float subframe, bool write_still) Line 1873	C++
 	blender.exe!render_startjob(void * rjv, wmJobWorkerStatus * worker_status) Line 735	C++
 	blender.exe!do_job_thread(void * job_v) Line 399	C++
 	blender.exe!tslot_thread_start(void * tslot_p) Line 178	C++

However, the main thread has the same call stack.

**System Information**
Operating system: Windows-10-10.0.23590-SP0 64 Bits
Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.6.0 Core Profile Context 23.20.01.04.230725
I can confirm a crash, but it doesn't happen on the main thread as mentioned in the description: ``` > blender.exe!blender::gpu::GLStateManager::image_bind(blender::gpu::Texture * tex_, int unit) Line 567 C++ blender.exe!GPU_texture_image_bind(GPUTexture * tex, int unit) Line 593 C++ blender.exe!blender::realtime_compositor::Result::bind_as_image(GPUShader * shader, const char * image_name, bool read) Line 138 C++ blender.exe!blender::realtime_compositor::realize_on_domain(blender::realtime_compositor::Context & context, blender::realtime_compositor::Result & input, blender::realtime_compositor::Result & output, const blender::realtime_compositor::Domain & domain, const blender::MatBase<float,3,3,4> & input_transformation, const blender::realtime_compositor::RealizationOptions & realization_options) Line 113 C++ blender.exe!blender::realtime_compositor::RealizeOnDomainOperation::execute() Line 38 C++ blender.exe!blender::realtime_compositor::Operation::evaluate() Line 37 C++ blender.exe!blender::realtime_compositor::Operation::add_and_evaluate_input_processor(blender::StringRef identifier, blender::realtime_compositor::SimpleOperation * processor) Line 138 C++ blender.exe!blender::realtime_compositor::Operation::add_and_evaluate_input_processors() Line 112 C++ blender.exe!blender::realtime_compositor::Operation::evaluate_input_processors() Line 181 C++ blender.exe!blender::realtime_compositor::Operation::evaluate() Line 33 C++ blender.exe!blender::realtime_compositor::Evaluator::compile_and_evaluate_node(blender::nodes::DNode node, blender::realtime_compositor::CompileState & compile_state) Line 109 C++ blender.exe!blender::realtime_compositor::Evaluator::compile_and_evaluate() Line 90 C++ blender.exe!blender::realtime_compositor::Evaluator::evaluate() Line 35 C++ blender.exe!blender::render::RealtimeCompositor::execute(const blender::render::ContextInputData & input_data) Line 488 C++ blender.exe!Render::compositor_execute(const Scene & scene, const RenderData & render_data, const bNodeTree & node_tree, const bool use_file_output, const char * view_name) Line 515 C++ blender.exe!RE_compositor_execute(Render & render, const Scene & scene, const RenderData & render_data, const bNodeTree & node_tree, const bool use_file_output, const char * view_name) Line 536 C++ blender.exe!COM_execute(Render * render, RenderData * render_data, Scene * scene, bNodeTree * node_tree, bool rendering, const char * view_name) Line 84 C++ blender.exe!ntreeCompositExecTree(Render * render, Scene * scene, bNodeTree * ntree, RenderData * rd, bool rendering, int do_preview, const char * view_name) Line 191 C++ blender.exe!do_render_compositor(Render * re) Line 1272 C++ blender.exe!do_render_full_pipeline(Render * re) Line 1474 C++ blender.exe!RE_RenderFrame(Render * re, Main * bmain, Scene * scene, ViewLayer * single_layer, Object * camera_override, int frame, float subframe, bool write_still) Line 1873 C++ blender.exe!render_startjob(void * rjv, wmJobWorkerStatus * worker_status) Line 735 C++ blender.exe!do_job_thread(void * job_v) Line 399 C++ blender.exe!tslot_thread_start(void * tslot_p) Line 178 C++ ``` However, the main thread has the same call stack. ``` **System Information** Operating system: Windows-10-10.0.23590-SP0 64 Bits Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.6.0 Core Profile Context 23.20.01.04.230725 ```
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-01 16:16:34 +01:00
Brecht Van Lommel added
Type
Bug
and removed
Type
Report
labels 2023-12-11 16:00:26 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115043
No description provided.